--- a/rossman-proj.ipynb
+++ b/rossman-proj.ipynb
@@ -9,9 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mrdow\\Desktop\\rossman_git\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "C:\\Users\\mrdow\\rossman_git\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "C:\\Users\\mrdow\\AppData\\Local\\Temp\\ipykernel_20388\\2641756594.py:20: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\mrdow\\AppData\\Local\\Temp\\ipykernel_14692\\2641756594.py:20: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  train = pd.read_csv('train.csv')\n"
      ]
     },
@@ -5005,9 +5005,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "rossman (.venv)",
    "language": "python",
-   "name": "myenv"
+   "name": "my_rossman_env"
   },
   "language_info": {
    "codemirror_mode": {
